styles.css
body {
    margin: 0;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: #1a1a1a;
    color: white;
    font-family: sans-serif;
    text-align: center;
}

#buttonContainer{
    display: flex;
    gap: 2em;
    margin-bottom: 1em;
}

#mainContainer{
    display: flex;
    flex-direction: column;
    align-items: stretch;
}

.bottomBar{
    display: flex;
    flex: 1 1;
    justify-content: center;
    align-content: center;
    padding: 2em;
    gap: 1em;
}

.bottomBar .red{
    background-color: rgba(255, 117, 117, 0.7);
    font-weight: 600;
    border: none;
    outline: none;
    cursor: pointer;
    box-shadow: 0.1em;
}

.bottomBar .blue{
    background-color: rgba(131, 131, 255, 0.7);
    font-weight: 600;
    border: none;
    outline: none;
    cursor: pointer;
    box-shadow: 0.1em;
}

.bottomBar .green{
    background-color: rgba(131, 255, 131, 0.7);
    font-weight: 600;
    border: none;
    outline: none;
    cursor: pointer;
    box-shadow: 0.1em;
}

.bottomBar .randomColor{
    background-color: rgba(233, 143, 255, 0.7);
    font-weight: 600;
    border: none;
    outline: none;
    cursor: pointer;
    box-shadow: 0.1em;
}

.bottomBar .clear{
    color: rgb(255, 106, 106);
    font-weight: 600;
    border: none;
    outline: none;
    cursor: pointer;
    box-shadow: 0.1em;
}

#container{
    display: flex;
    flex: 1 1;
    align-items: center;
    justify-content: center;
}

.row {
    display: flex;
    flex: 1 1;
}

.col {
    padding: 0.25em;
    background-color: white;
    flex: 1 1;
}

